@@ -14,7 +14,7 @@
 
 <div class="row">
     <div class="col-md-6">
-        {% if object.caption %}<p>{{ object.caption|safe }}</p>{% endif %}
+        {% if object.caption %}<p>{{ object.caption }}</p>{% endif %}
         <a href="{{ object.image.url }}">
             <img src="{{ object.get_display_url }}" class="img-thumbnail" alt="{{ object.title }}">
         </a>
